Changelog
=========


1.2.2 (unreleased)
------------------

- Teamraum 3.0.2 style fixes.
  [mathias.leimgruber]

- GEVER: Added sprite icon for docugate action.
  [phgross]

- Fix image margin on tabbeview overview.
  [mathias.leimgruber]

- fix blog styling.
  [tschanzt]

- Fixed french livesearch legend is over searchbox in opengever.
  [Julian Infanger]

- Add styling for new tabbedview menu to izug4 profile.
  [jone]

- Show arrow on external links or links with a _blank target.
  [jone]

- Change portlet folding icons according to "design fundamentals".
  [jone]

- Fixed french livesearch legend translation.
  [phgross]


1.2.1 (2012-09-12)
------------------

- Changed styling of tabbedview menu actions, they fold now to the right.
  [phgross]


1.2 (2012-08-22)
----------------

- Styled solr search page.
  [buchi]

- iZug 4: hide disabled tabbed view filter field.
  [jone]

- Set IE8 mode on zug plone 3 sites.
  [mathias.leimgruber]

- Do not use style <q> as italic on headings (@@sharing).
  [jone]

- Data grid widget: style "add row" buttons.
  [jone]

- Added iZug specific UI style for Openlayers
  [href]


1.1.9 (2012-06-28)
------------------

- Added IE9 fix for the participation roles field (list widget).
  [phgross]

- Added IE9 Fix for sharing tab in opengever.
  [phgross]


1.1.8 (2012-06-25)
------------------

- Added ODF types to MIME types registry
  [lgraf]

- Added sprite icons for OpenOffice MIME types
  [lgraf]


1.1.7 (2012-06-22)
------------------

- Updated MIME types for Microsoft Office formats
  [lgraf]

- Updated MIME types for Adobe Photoshop, Illustrator and InDesign
  [lgraf]

- Added icons for Adobe file types (Illustrator, Indesign and Photoshop)
  [lgraf]

- Updated Mimetype definition for MS Visio
  [lgraf]


1.1.6 (2012-06-18)
------------------

- Added mimetypes and icons for MS Visio, MS Project and MindManager files
  [lgraf]

- Hide chapter description in izug4.
  [mathias.leimgruber]
