@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0.1</version>
+  <version>1200</version>
   <dependencies>
       <dependency>profile-collective.js.jqueryui:default</dependency>
       <dependency>profile-izug.basetheme:default</dependency>
