@@ -5,6 +5,9 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
+- Add styling for new tabbedview menu to opengever profile.
+  [phgross]
+
 - Teamraum 3.0.2 style fixes.
   [mathias.leimgruber]
 
